feat: added the manga search form